fix(dpav-486): fixed the spacing issue on small screens (#216)
* fix(dpav-486): fixed the spacing issue on small screens

* fix(dpav-486): fixed import issue picked up by linter

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,9 +23,9 @@
   width: 0;
 }
 
-@supports (scrollbar-color: #6a6a6a #14141460) {
+@-moz-document url-prefix() {
   * {
-    scrollbar-width: auto;
+    scrollbar-width: thin;
     scrollbar-color: #6a6a6a #14141460;
   }
 }
