--- a/frontend/src/tools/Legend/style.module.css
+++ b/frontend/src/tools/Legend/style.module.css
@@ -10,6 +10,10 @@
   max-height: 40vh;
   overflow-y: auto;
   z-index: 1000;
+
+  @media screen and (max-height: 767px) {
+    margin-right: 9vh;
+  }
 }
 
 .closeButton {
